@@ -42,6 +42,7 @@
 #include "Transaction/Manager.h"
 #include "Transaction/ManagerFeature.h"
 #include "Transaction/Methods.h"
+#include "Utils/CollectionNameResolver.h"
 #include "VocBase/LogicalCollection.h"
 
 using namespace arangodb;
@@ -109,11 +110,26 @@ Result ClusterTransactionState::beginTransaction(transaction::Hints hints) {
 
     ClusterTrxMethods::SortedServersSet leaders{};
     allCollections([&](TransactionCollection& c) {
-      auto shardIds = c.collection()->shardIds();
-      for (auto const& pair : *shardIds) {
-        std::vector<arangodb::ShardID> const& servers = pair.second;
-        if (!servers.empty()) {
-          leaders.emplace(servers[0]);
+      if (c.collection()->isSmartEdgeCollection()) {
+        CollectionNameResolver resolver{_vocbase};
+        for (auto const& real : c.collection()->realNames()) {
+          auto realCol = resolver.getCollection(real);
+          TRI_ASSERT(realCol != nullptr);
+          auto shardIds = realCol->shardIds();
+          for (auto const& pair : *shardIds) {
+            std::vector<arangodb::ShardID> const& servers = pair.second;
+            if (!servers.empty()) {
+              leaders.emplace(servers[0]);
+            }
+          }
+        }
+      } else {
+        auto shardIds = c.collection()->shardIds();
+        for (auto const& pair : *shardIds) {
+          std::vector<arangodb::ShardID> const& servers = pair.second;
+          if (!servers.empty()) {
+            leaders.emplace(servers[0]);
+          }
         }
       }
       return true;  // continue
