@@ -829,6 +829,11 @@ struct RemoveProcessor : ReplicatedProcessorBase<RemoveProcessor> {
         _previousDocumentBuilder(&_methods) {}
 
   auto processValue(VPackSlice value, bool isArray) -> Result {
+#ifdef ARANGODB_ENABLE_FAILURE_TESTS
+    TRI_IF_FAILURE("failOnCRUDAction" + _collection.name()) {
+      return {TRI_ERROR_DEBUG, "Intentional test error"};
+    }
+#endif
     std::string_view key;
 
     if (value.isString()) {
@@ -1126,6 +1131,11 @@ struct InsertProcessor : ModifyingProcessorBase<InsertProcessor> {
       // return an error *instead* of actually processing the value
       return TRI_ERROR_DEBUG;
     }
+#ifdef ARANGODB_ENABLE_FAILURE_TESTS
+    TRI_IF_FAILURE("failOnCRUDAction" + _collection.name()) {
+      return {TRI_ERROR_DEBUG, "Intentional test error"};
+    }
+#endif
 
     _newDocumentBuilder->clear();
 
@@ -1399,6 +1409,11 @@ struct ModifyProcessor : ModifyingProcessorBase<ModifyProcessor> {
         _isUpdate(isUpdate) {}
 
   auto processValue(VPackSlice newValue, bool isArray) -> Result {
+#ifdef ARANGODB_ENABLE_FAILURE_TESTS
+    TRI_IF_FAILURE("failOnCRUDAction" + _collection.name()) {
+      return {TRI_ERROR_DEBUG, "Intentional test error"};
+    }
+#endif
     _newDocumentBuilder->clear();
     _previousDocumentBuilder->clear();
 
