@@ -91,6 +91,23 @@ std::shared_ptr<arangodb::LogicalCollection> GetCollectionFromArgument(
   return vocbase.lookupCollection(TRI_ObjectToString(isolate, val));
 }
 
+void addTransactionHints(arangodb::LogicalCollection& col,
+                         arangodb::SingleCollectionTransaction& trx,
+                         bool isMultiple, bool isOverwritingInsert) {
+  if (arangodb::ServerState::instance()->isCoordinator()) {
+    if (col.isSmartEdgeCollection()) {
+      // Smart Edge Collections hit multiple shards with dependent requests,
+      // they have to be globally managed.
+      trx.addHint(arangodb::transaction::Hints::Hint::GLOBAL_MANAGED);
+      return;
+    }
+  }
+  // For non multiple operations we can optimize to use SingleOperations.
+  if (!isMultiple && !isOverwritingInsert) {
+    trx.addHint(arangodb::transaction::Hints::Hint::SINGLE_OPERATION);
+  }
+}
+
 }  // namespace
 
 using namespace arangodb;
@@ -728,9 +745,7 @@ static void RemoveVocbaseCol(v8::FunctionCallbackInfo<v8::Value> const& args) {
           std::shared_ptr<transaction::Context>(), &transactionContext),
       collectionName, AccessMode::Type::WRITE, trxOpts);
 
-  if (!payloadIsArray) {
-    trx.addHint(transaction::Hints::Hint::SINGLE_OPERATION);
-  }
+  ::addTransactionHints(*col, trx, payloadIsArray, false);
 
   Result res = trx.begin();
   if (!res.ok()) {
@@ -825,7 +840,7 @@ static void RemoveVocbase(v8::FunctionCallbackInfo<v8::Value> const& args) {
       std::shared_ptr<transaction::Context>(
           std::shared_ptr<transaction::Context>(), &transactionContext),
       collectionName, AccessMode::Type::WRITE, trxOpts);
-  trx.addHint(transaction::Hints::Hint::SINGLE_OPERATION);
+  ::addTransactionHints(*collection, trx, false, false);
 
   Result res = trx.begin();
 
@@ -1540,9 +1555,7 @@ static void ModifyVocbaseCol(TRI_voc_document_operation_e operation,
           std::shared_ptr<transaction::Context>(), &transactionContext),
       collectionName, AccessMode::Type::WRITE, trxOpts);
 
-  if (!payloadIsArray) {
-    trx.addHint(transaction::Hints::Hint::SINGLE_OPERATION);
-  }
+  addTransactionHints(*col, trx, payloadIsArray, false);
 
   Result res = trx.begin();
 
@@ -1666,7 +1679,7 @@ static void ModifyVocbase(TRI_voc_document_operation_e operation,
       std::shared_ptr<transaction::Context>(
           std::shared_ptr<transaction::Context>(), &transactionContext),
       collectionName, AccessMode::Type::WRITE, trxOpts);
-  trx.addHint(transaction::Hints::Hint::SINGLE_OPERATION);
+  addTransactionHints(*collection, trx, false, false);
 
   Result res = trx.begin();
   if (!res.ok()) {
@@ -1974,9 +1987,8 @@ static void InsertVocbaseCol(v8::Isolate* isolate,
           std::shared_ptr<transaction::Context>(), &transactionContext),
       *collection, AccessMode::Type::WRITE, trxOpts);
 
-  if (!payloadIsArray && !options.isOverwriteModeUpdateReplace()) {
-    trx.addHint(transaction::Hints::Hint::SINGLE_OPERATION);
-  }
+  addTransactionHints(*collection, trx, payloadIsArray,
+                      options.isOverwriteModeUpdateReplace());
 
   Result res = trx.begin();
 
