@@ -31,6 +31,13 @@ devel
 
 * FE-133: Alphabetical sorting for collections on user permissions page.
 
+* Fixed EE: Concurrent batch insert/update CRUD operations into
+  SmartEdgeCollections on conflicting edge keys could get the
+  smart edge caching out-of-sync, which would yield different results
+  for OUTBOUND/INBOUND search over edges. This is now fixed, however there
+  is now a slightly higher chance to get a CONFLICT response back on those
+  queries.
+
 * Fixed issue #18053: Computed Values become null when Schema is modified.
 
 * BTS-1193: Fix for schema update. When removing a field and then inserting a 
